@@ -17,7 +17,7 @@ Copyright/License
 All the map files are under Public Domain.
 
 The (deprecated) file updmap-otf.sh and the (in perl rewritten version)
-updmap-setup-kanji.pl are licensed under the following terms:
+updmap-(setup-)kanji.pl are licensed under the following terms:
   Copyright 2004-2006 by KOBAYASHI Taizo
   Copyright 2011-2012 by PREINING Norbert
 Licensed under the GPL version 3 or any later version, 
