@@ -1,3 +1,10 @@
+2013-04-05  Norbert Preining  <preining@logic.at>
+
+	* scripts/updmap-setup-kanji.pl -> scripts/updmap-kanji.pl
+	  scripts/updmap-setup-kanji-sys.sh -> scripts/updmap-kanji-sys.sh
+	rename due to Windows not liking "setup", might be changed
+	again after discussion
+
 2012-06-19  Norbert Preining  <preining@logic.at>
 
 	* scripts/updmap-setup-kanji.pl: 
